# graphrag-docs

./: .gitignore  README.md  ontology.json  pyproject.toml
graphrag-docs/: __init__.py
